<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="ovh.krs.madgp.ui.home.HomeFragment"
        android:label="@string/nav_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_startwo"
        android:name="ovh.krs.madgp.ui.startwo.startwoFragment"
        android:label="@string/nav_startwo"
        tools:layout="@layout/fragment_startwo" />

    <fragment
        android:id="@+id/nav_myinfo"
        android:name="ovh.krs.madgp.ui.myinfo.myinfoFragment"
        android:label="@string/nav_myinfo"
        tools:layout="@layout/fragment_myinfo" />


</navigation>